--- a/cnft-notifier-api/pom.xml
+++ b/cnft-notifier-api/pom.xml
@@ -117,6 +117,7 @@
                         </goals>
                     </execution>
                 </executions>
+                <version>2.5.5</version>
             </plugin>
         </plugins>
     </build>
